// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create fail 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "createProjectChain": [Function],
    "dataLoaded": true,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [
      "Create project fail!",
    ],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <li>
     <a href=\\"/\\">Test</a>
   </li>
   <!--0-->
   <!--0-->
   <li>Create project chain</li>
 </ul>
 <!--0-->
 <!--0-->
 <ul class=\\"errors-panel\\">
   <li>Create project fail!</li>
 </ul>
 <!--0-->
 <!--0-->
 <div class=\\"project-chain-form\\">
   <form>
     <div class=\\"group\\">
       <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Name</label>
     </div>
     <div class=\\"group\\">
       <textarea wrap=\\"off\\" style=\\"display: none\\" name=\\"command\\"></textarea>
       <div class=\\"code-flask\\">
         <div class=\\"codeflask codeflask--has-line-numbers\\">
           <textarea class=\\"codeflask__textarea codeflask__flatten\\" spellcheck=\\"false\\" autocapitalize=\\"off\\" autocomplete=\\"off\\" autocorrect=\\"off\\"></textarea><pre class=\\"codeflask__pre codeflask__flatten  language-html\\"><code class=\\"codeflask__code  language-html\\"></code></pre>
           <div class=\\"codeflask__lines\\"><span class=\\"codeflask__lines__line\\">1</span></div>
         </div>
       </div>
       <!--0--><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Command</label>
     </div>
     <div class=\\"group\\">
       <button type=\\"submit\\"><span>Create</span></button>
     </div>
   </form>
 </div>
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "createProjectChain": [Function],
    "dataLoaded": false,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {},
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <!--0-->
   <li></li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;
